# ECSEngine

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  engine.hpp  logger.hpp  new_engine.hpp  packed_array.hpp  system.hpp
libs/: CMakeLists.txt  config.hpp.in  logger.cpp  logger.hpp  render.cpp  tracker_system.hpp
libs/shaders/: RedTriangle.shader
src/core/: component.hpp  constants.hpp  engine.hpp  entity.cpp  entity.hpp  packed_array.hpp  system.hpp  view.hpp
src/libs/: CMakeLists.txt  config.hpp.in  logger.hpp  profiler.cpp  profiler.hpp  render.cpp  renderer.cpp  renderer.hpp  tracker_system.hpp  vector3.cpp  vector3.hpp  vectors.cpp  vectors.hpp
src/libs/shaders/: RedTriangle.shader
